lesson23/diag-pod-rbac.yaml
apiVersion: v1
kind: Pod
metadata:
  name: diag-pod
  namespace: dev
spec:
  serviceAccountName: diag-sa
  containers:
  - name: diag
    image: bitnami/kubectl:latest
    command:
    - /bin/sh
    - -c
    - |
      echo "Listing wordpress pods in namespace dev..."
      while true; do
        date
        kubectl get pods -n dev -l app=wordpress -o wide
        echo "----"
        sleep 30
      done
  restartPolicy: Always
